# leafpad

./: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
.pc/maemo_make.patch/: configure.ac
.pc/maemo_make.patch/data/: Makefile.am
.pc/maemo_src.patch/src/: callback.c  callback.h  file.c  main.c  menu.c  search.c  selector.c  view.c  window.c
data/: Makefile.in
data/icons/: Makefile.in
data/icons/16x16/: Makefile.in
data/icons/22x22/: Makefile.in
data/icons/24x24/: Makefile.in
data/icons/32x32/: Makefile.in
data/icons/40x40/: Makefile.in
data/icons/40x40/.svn/: entries
data/icons/40x40/.svn/text-base/: Makefile.in.svn-base
data/icons/48x48/: Makefile.in
data/icons/48x48/.svn/: entries
data/icons/48x48/.svn/text-base/: Makefile.in.svn-base
data/icons/50x50/: Makefile.in
data/icons/50x50/.svn/: entries
data/icons/50x50/.svn/text-base/: Makefile.in.svn-base  leafpad.png.svn-base
data/icons/64x64/: Makefile.in
data/icons/64x64/.svn/: entries
data/icons/64x64/.svn/text-base/: Makefile.in.svn-base
data/icons/scalable/: Makefile.in
debian/: changelog  control  control.in  postinst  rules
debian/.svn/: entries
debian/.svn/text-base/: changelog.svn-base  control.in.svn-base  control.svn-base  files.svn-base  rules.svn-base
patches/: maemo_make.patch  maemo_src.patch  series
src/: Makefile.in  callback.c  dialog.c  font-dialog.c  gtkprint.c  main.c  menu.c  selector.c  view.c  window.c
src/charset-detector/: Makefile.in
src/charset-detector/include/: Makefile.in
src/charset-detector/src/: Makefile.in
src/charset-detector/src/entry/: Makefile.in
src/charset-detector/src/tables/: Makefile.in
src/charset-detector/test/: Makefile.in
